# bevy_gltf_blender

./: .gitignore  Cargo.toml
assets/: Scene.glb  scene.blend
src/: main.rs
