[package]
name = "bevy_gltf_blender"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    # Windowing
    "bevy_winit",
    "x11",
    # Rendering
    "bevy_pbr",
    "tonemapping_luts",
    # Asset Loading
    "bevy_gltf",
    # Controller
    # "bevy_gilrs",
]

[dependencies]
# Audio
# bevy_kira_audio = "0.18.0"
# Asset Embedding
bevy_embedded_assets = { version = "0.9.1", optional = true }
# Camera
# bevy_third_person_camera = "0.1.7"
# Panic Handling
# bevy-panic-handler = "2.1.0"
# Physics
bevy_rapier3d = "0.23.0"

[features]
default = []
embed-assets = ["dep:bevy_embedded_assets"]